# llama.cpp

./: CMakeLists.txt
.github/workflows/: build-linux-cross.yml
common/: CMakeLists.txt  common.cpp  common.h
examples/embedding/: embedding.cpp
ggml/src/: CMakeLists.txt
src/: CMakeLists.txt
tools/run/: CMakeLists.txt
tools/server/: CMakeLists.txt  main.cpp  server.cpp
